--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ html {
 
 .history-sec-history {
   padding: 3rem clamp(1.5rem, 5vw, 4rem);
-  padding-bottom: 16rem;
+  padding-bottom: 5rem;
   display: flex;
   flex-direction: column;
   gap: 5rem;
@@ -333,7 +333,7 @@ html {
 
 .section__image {
   border-radius: 2rem;
-  border: solid rgba(255, 177, 250, 0.35);
+  border: solid rgba(120, 71, 255, 0.5);
   border-width: 0.5rem;
   filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5));
 }
@@ -376,12 +376,13 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: clamp(4rem, 17.9vw, 6.25rem);
 }
 .link-youtube h3 {
   text-align: center;
   color: white;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: clamp(0.7rem, 3.5vw, 1.5rem);
   font-family: "Rubik";
   font-weight: 300;
   width: 100%;
