--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,56 @@ html {
   min-height: 100vh;
 }
 
+/* --- Error 404 --- */
+.e404 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 4rem;
+}
+.e404__title, .e404__subtitle {
+  text-align: center;
+  font-family: "Rubik";
+  color: white;
+  text-shadow: 12px 12px 16px rgba(0, 0, 0, 0.4);
+}
+.e404__title {
+  font-weight: 500;
+  font-size: clamp(4rem, 10vw, 8rem);
+  padding-bottom: 1rem;
+}
+.e404__subtitle {
+  font-size: clamp(1.5rem, 3.75vw, 3rem);
+  font-weight: 400;
+}
+.e404__picture {
+  border-radius: 2rem;
+  border: solid rgba(255, 177, 250, 0.35);
+  border-width: 0.5rem;
+  filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5));
+  width: clamp(12rem, 21.3vw, 16rem);
+  height: auto;
+}
+
+.e404-div--error {
+  padding-top: clamp(4rem, 10vw, 8rem);
+}
+.e404-div--button {
+  padding-top: 3rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem 2rem;
+}
+.e404-div--picture {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem 5rem;
+  padding: 0 5rem;
+  padding-top: 5rem;
+}
+
 /* --- Nav menu --- */
 .header {
   display: flex;
