--- a/css/style-alt.css
+++ b/css/style-alt.css
@@ -76,6 +76,14 @@ table {
   font-weight: 300;
   src: url("../assets/fonts/rubik/rubik-v31-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+/* rubik-300italic - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Rubik";
+  font-style: italic;
+  font-weight: 300;
+  src: url("../assets/fonts/rubik/rubik-v31-latin-300italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 /* rubik-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -362,9 +370,8 @@ html {
 }
 .history-intro__title, .history-intro__subtitle {
   text-align: center;
-  font-family: "Rubik";
+  font-family: "Terminus";
   color: white;
-  text-shadow: 12px 12px 16px rgba(0, 0, 0, 0.4);
 }
 .history-intro__title {
   font-weight: 500;
@@ -396,7 +403,7 @@ html {
 .history-article__title {
   font-family: "Rubik";
   text-align: center;
-  color: black;
+  color: white;
   text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.4);
   font-weight: 500;
   font-size: clamp(3.5rem, 10.625vw, 5rem);
@@ -404,10 +411,8 @@ html {
 .history-article__picture {
   width: clamp(12rem, 21.3vw, 16rem);
   height: auto;
-  border-radius: 2rem;
-  border: solid rgba(120, 71, 255, 0.5);
-  border-width: 0.5rem;
-  filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5));
+  filter: grayscale(100%) brightness(0.9) contrast(1000%);
+  image-rendering: pixelated;
 }
 
 .history-article-div {
@@ -431,10 +436,10 @@ html {
 }
 
 .history-article-paragraph {
-  font-family: "Rubik";
+  font-family: "Terminus";
   text-align: center;
   padding: 0 2rem;
-  color: black;
+  color: white;
   text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.4);
   font-weight: 300;
   font-size: 16px;
@@ -461,7 +466,7 @@ html {
 }
 .roster-presentation__title, .roster-presentation__subtitle {
   text-align: center;
-  font-family: "Rubik";
+  font-family: "Terminus";
   color: white;
   text-shadow: 12px 12px 16px rgba(0, 0, 0, 0.4);
 }
@@ -531,16 +536,35 @@ html {
   background-color: white;
   color: black;
   text-decoration: none;
-  font-family: "Rubik";
+  font-family: "terminus";
   font-weight: 300;
   font-size: 1.125rem;
   border: solid white 0.0625rem;
-  border-radius: 2rem;
-  box-shadow: 10px 10px 12px rgba(0, 0, 0, 0.4);
+}
+.a-button::before {
+  content: "/";
+  margin-right: 0.3rem;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+}
+.a-button:hover {
+  color: #1900ff;
+}
+.a-button:hover::before {
+  color: rgb(0, 255, 0);
 }
 .a-button--transparent:not(:hover) {
   background: none;
   color: white;
+}
+.a-button--transparent:not(:hover)::before {
+  color: white;
+}
+.a-button--transparent:hover {
+  color: #1900ff;
+}
+.a-button--transparent:hover::before {
+  color: rgb(0, 255, 0);
 }
 
 .youtube-embed {
