--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,8 @@ html {
   .header {
     flex-direction: column;
     justify-content: center;
-    column-gap: 8rem;
+    -moz-column-gap: 8rem;
+         column-gap: 8rem;
     padding: 1rem 1rem;
   }
 }
@@ -248,7 +249,8 @@ html {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  column-gap: 3rem;
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
   row-gap: 1.5rem;
 }
 @media screen and (max-width: 64rem) {
@@ -405,6 +407,9 @@ html {
   justify-content: center;
 }
 .history-article-div--5 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   padding-bottom: 5rem;
 }
 
@@ -599,6 +604,10 @@ html {
   	color: white;
   }
   */
+}
+.a-button:hover {
+  border-color: #F6F6F6;
+  background-color: #F6F6F6;
 }
 .a-button--transparent:not(:hover) {
   background: none;
