--- a/css/style.scss
+++ b/css/style.scss
@@ -334,6 +334,9 @@ html {
 		justify-content: center;
 	}
 	&--5 {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
 		padding-bottom: 5rem;
 	}
 }
@@ -564,6 +567,11 @@ html {
 	border-radius: px2rem(32);
 	box-shadow: $effect-box-shadow;
 
+
+	&:hover {
+		border-color: #F6F6F6;
+		background-color: #F6F6F6;
+	}
 	&--transparent {
 		&:not(:hover) {
 			background: none;
